# linguagap

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  biome.json  catalog-info.yaml  compose.yaml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sonar-project.properties  tsconfig.json
.github/workflows/: ci.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  middleware.yaml  pvc.yaml  secret.yaml  service.yaml
chart/templates/monitoring/: grafana-dashboard.yaml  prometheusrule.yaml  servicemonitor.yaml
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  index.md  troubleshooting.md
scripts/ci/: ty_gitlab_to_sonar_external_issues.py
src/app/: asr.py  auth.py  diarization.py  lang_id.py  languages.py  main.py  mt.py  session_registry.py  speaker_tracker.py  streaming.py  streaming_policy.py  tts.py
src/app/backends/: __init__.py  base.py  types.py
src/app/backends/asr/: whisper.py
src/app/backends/summarization/: qwen3.py
src/app/backends/translation/: translategemma.py
src/app/scripts/: asr_smoke.py  mt_smoke.py  pipeline_smoke.py  stream_client.py
src/app/streaming/: viewer.py
static/: admin-login.html  admin.html  index.html  login.html  translate.html  viewer.html
static/js/: admin.js  admin_login.js  host.js  login.js  transcript_export.js  translate.js  types.d.ts  viewer.js
static/js/lib/: auth_guard.js  i18n.js
tests/: __init__.py  conftest.py  test_admin.py  test_asr.py  test_auth.py  test_backends_asr.py  test_backends_factory.py  test_backends_mt.py  test_main.py  test_mt.py  test_streaming.py  test_streaming_policy.py  test_viewer_websocket.py  test_websocket_handler.py
tests/e2e/: __init__.py  conftest.py  test_bilingual_dialogue.py
tests/e2e/dialogues/: __init__.py  generator.py  templates.py
tests/e2e/evaluation/: __init__.py  judge.py  reports.py  rubrics.py
tests/e2e/reports/: issues_to_debug.md
tests/e2e/scripts/: evaluate_scenarios.py  generate_audio_fixtures.py  test_single_file.py
tests/e2e/streaming/: __init__.py  client.py
tests/e2e/tts/: __init__.py  cache.py  client.py  voices.py
tests/fixtures/scenarios/: ar_business_meeting.yaml  ar_casual_conversation.yaml  ar_code_switching.yaml  ar_customer_service.yaml  bg_customer_service.yaml  en_customer_service.yaml  es_customer_service.yaml  fa_business_meeting.yaml  fa_casual_conversation.yaml  fa_code_switching.yaml  fa_customer_service.yaml  fr_customer_service.yaml  hr_customer_service.yaml  hu_customer_service.yaml  it_customer_service.yaml  ku_customer_service.yaml  pl_customer_service.yaml  ro_customer_service.yaml  ru_customer_service.yaml  sample_scenario.yaml  sq_business_meeting.yaml  sq_casual_conversation.yaml  sq_code_switching.yaml  sq_customer_service.yaml  sr_customer_service.yaml  tr_business_meeting.yaml  tr_casual_conversation.yaml  tr_code_switching.yaml  tr_customer_service.yaml  uk_business_meeting.yaml  uk_casual_conversation.yaml  uk_code_switching.yaml  uk_customer_service.yaml
