[project]
name = "linguagap"
version = "0.1.0"
description = "Real-time speech transcription and translation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "faster-whisper>=1.0.0",
    "numpy>=1.26.0",
    "ctranslate2>=4.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.20.0",
]

[tool.uv]
dev-dependencies = []
