[project]
name = "linguagap"
version = "0.1.0"
description = "Real-time speech transcription and translation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Johann Hartmann", email = "johann@example.com" }
]
keywords = ["speech", "transcription", "translation", "asr", "whisper", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "faster-whisper>=1.0.0",
    "numpy>=1.26.0",
    "ctranslate2>=4.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.20.0",
    # Speaker diarization and language identification
    # Pin to 2.5.x for cuDNN 9.7 compatibility (base image has 9.7, torch 2.8 needs 9.8)
    "torch>=2.5.0,<2.6.0",
    "torchaudio>=2.5.0,<2.6.0",
    "pyannote.audio>=3.1.0",
    "speechbrain>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/johannhartmann/linguagap"
Repository = "https://github.com/johannhartmann/linguagap"
Issues = "https://github.com/johannhartmann/linguagap/issues"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a3",
    "bandit>=1.7.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/app"]
branch = true
omit = ["*/scripts/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert statements

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unresolved-import = "ignore"
invalid-argument-type = "ignore"  # llama-cpp-python complex types
not-subscriptable = "ignore"  # llama-cpp-python return types
possibly-missing-attribute = "ignore"  # llama-cpp-python nullable fields
